fix(buttons): Center text for stretch variant (#3972)
* fix(buttons): center text for stretch variant
Revert base variant to left aligned
Update tests and docs

* fix(buttons): add full width example and update docs

--- a/ui/components/buttons/base/_index.scss
+++ b/ui/components/buttons/base/_index.scss
@@ -16,7 +16,6 @@
   position: relative;
   display: inline-flex;
   align-items: center;
-  justify-content: center;
   padding: 0;
   background: transparent;
   background-clip: border-box;
@@ -399,12 +398,13 @@ a.slds-button--inverse:focus {
 }
 
 /**
- * @summary Creates a button style for 100% width that maintains current styling
+ * @summary Creates a button style for 100% width with centered text that maintains current styling
  * @selector .slds-button_stretch
  * @restrict .slds-button
  * @modifier
  * @group size
  */
 .slds-button_stretch {
+  justify-content: center;
   width: 100%;
 }
