--- a/ui/components/buttons/mixins/_index.scss
+++ b/ui/components/buttons/mixins/_index.scss
@@ -6,6 +6,7 @@
   padding-right: $spacing-medium;
   text-align: center;
   vertical-align: middle;
+  justify-content: center;
   border: $border-width-thin solid $color-border-primary;
   transition: border 0.15s linear;
 }
